// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FiltersPanelTile > renders CriteriaFilterTile for NumericFilter 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          aria-label="arrow-down"
          class="csdk-transition csdk-ml-[4px] csdk-cursor-pointer -csdk-rotate-90"
          fill="#5B6372"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
            fill="#5B6372"
            fill-rule="nonzero"
          />
        </svg>
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          TestRevenue
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="csdk-p-[4px] csdk-leading-[26px] csdk-mx-auto csdk-text-[13px] csdk-whitespace-nowrap csdk-flex csdk-flex-wrap csdk-gap-x-1 csdk-justify-center"
        >
          criteriaFilter.greaterThan
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-17lmbjk css-1diaq70-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FiltersPanelTile > renders CriteriaFilterTile for RankingFilter 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          aria-label="arrow-down"
          class="csdk-transition csdk-ml-[4px] csdk-cursor-pointer -csdk-rotate-90"
          fill="#5B6372"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
            fill="#5B6372"
            fill-rule="nonzero"
          />
        </svg>
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          TestRevenue
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="csdk-p-[4px] csdk-leading-[26px] csdk-mx-auto csdk-text-[13px] csdk-whitespace-nowrap csdk-flex csdk-flex-wrap csdk-gap-x-1 csdk-justify-center"
        >
          criteriaFilter.top
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-17lmbjk css-1diaq70-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FiltersPanelTile > renders CriteriaFilterTile for TextFilter 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          aria-label="arrow-down"
          class="csdk-transition csdk-ml-[4px] csdk-cursor-pointer -csdk-rotate-90"
          fill="#5B6372"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
            fill="#5B6372"
            fill-rule="nonzero"
          />
        </svg>
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          TestRevenue
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="csdk-p-[4px] csdk-leading-[26px] csdk-mx-auto csdk-text-[13px] csdk-whitespace-nowrap csdk-flex csdk-flex-wrap csdk-gap-x-1 csdk-justify-center"
        >
          criteriaFilter.notStartsWith
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-17lmbjk css-1diaq70-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FiltersPanelTile > renders CustomFilterTile for advnced filter type 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          TestRevenue
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <p
          class="csdk-text-center csdk-text-[13px]"
        >
          customFilterTileMessage
        </p>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-17lmbjk css-1diaq70-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FiltersPanelTile > renders FilterTile for unsupported filter type 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          unsupportedFilter.title
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="csdk-p-[8px] csdk-text-center csdk-text-[13px]"
        >
          <span>
            unsupportedFilter.message
          </span>
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-17lmbjk css-1diaq70-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FiltersPanelTile > renders RelativeDateFilterTile for RelativeDateFilter 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          aria-label="arrow-down"
          class="csdk-transition csdk-ml-[4px] csdk-cursor-pointer -csdk-rotate-90"
          fill="#5B6372"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.589 10L7 10.777 11.99 15 17 10.777 16.413 10l-4.422 3.727z"
            fill="#5B6372"
            fill-rule="nonzero"
          />
        </svg>
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          TestRevenue
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="csdk-leading-[26px] csdk-mx-auto csdk-my-2 csdk-px-1 csdk-text-[13px] csdk-whitespace-nowrap csdk-flex csdk-flex-wrap csdk-gap-x-1 csdk-justify-center"
        >
          dateFilter.next 1 undefined dateFilter.from dateFilter.today
        </div>
      </main>
      <footer
        class="css-1wpi5bx"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeSmall css-17lmbjk css-1diaq70-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
              name="tile-switch"
              role="switch"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
            />
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </span>
          <span
            class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
          />
        </span>
      </footer>
    </div>
  </div>
</div>
`;

exports[`FiltersPanelTile > renders locked CriteriaFilterTile 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          fill="#b4b4b4"
          height="22"
          viewBox="0 0 22 22"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(5.000000,5.000000) scale(.70, 0.6)"
          >
            <path
              d="m3,9v11h14V9M4,9V6c0-3.3 2.7-6 6-6c3.3,0 6,2.7 6,6v3H14V6c0-2.2-1.8-4-4-4-2.2,0-4,1.8-4,4v3"
            />
            <rect
              fill="#dcdcdc"
              height="9"
              width="12"
              x="4"
              y="10"
            />
          </g>
        </svg>
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          TestRevenue
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="csdk-p-[4px] csdk-leading-[26px] csdk-mx-auto csdk-text-[13px] csdk-whitespace-nowrap csdk-flex csdk-flex-wrap csdk-gap-x-1 csdk-justify-center"
        >
          criteriaFilter.greaterThan
        </div>
        <div
          style="position: absolute; top: 4px; left: 4px; right: 4px; bottom: 4px; background-color: white; opacity: 0.5;"
        />
      </main>
      <footer
        class="css-1wpi5bx"
      />
    </div>
  </div>
</div>
`;

exports[`FiltersPanelTile > renders locked RelativeDateFilter component 1`] = `
<div>
  <div
    class="css-xhbwdz"
  >
    <div
      class="css-l4aa93"
      style="min-width: 215px; background-color: rgb(255, 255, 255);"
    >
      <header
        class="css-3aw1ep"
        style="color: rgb(91, 99, 114);"
      >
        <svg
          fill="#b4b4b4"
          height="22"
          viewBox="0 0 22 22"
          width="22"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(5.000000,5.000000) scale(.70, 0.6)"
          >
            <path
              d="m3,9v11h14V9M4,9V6c0-3.3 2.7-6 6-6c3.3,0 6,2.7 6,6v3H14V6c0-2.2-1.8-4-4-4-2.2,0-4,1.8-4,4v3"
            />
            <rect
              fill="#dcdcdc"
              height="9"
              width="12"
              x="4"
              y="10"
            />
          </g>
        </svg>
        <span
          class="csdk-text-[13px] csdk-mt-[6px] csdk-mb-[4px] csdk-ml-[7px] csdk-leading-[16px]"
          style="color: rgb(91, 99, 114);"
        >
          TestRevenue
        </span>
      </header>
      <main
        style="color: rgb(91, 99, 114); position: relative;"
      >
        <div
          class="csdk-leading-[26px] csdk-mx-auto csdk-my-2 csdk-px-1 csdk-text-[13px] csdk-whitespace-nowrap csdk-flex csdk-flex-wrap csdk-gap-x-1 csdk-justify-center"
        >
          dateFilter.next 1 undefined dateFilter.from dateFilter.today
        </div>
        <div
          style="position: absolute; top: 4px; left: 4px; right: 4px; bottom: 4px; background-color: white; opacity: 0.5;"
        />
      </main>
      <footer
        class="css-1wpi5bx"
      />
    </div>
  </div>
</div>
`;
